# ddia-python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/chapter_1/: main.py  request_wrapper.py
src/chapter_2/: constants.py  main.py
src/chapter_2/clients/: mongo_client.py  mysql_client.py
src/chapter_2/interfaces/: client_interface.py  database_interface.py
src/chapter_2/services/: mongo_service.py  mysql_service.py
tests/chapter_1/: test_request_wrapper.py
tests/chapter_2/services/: test_mongo_service.py  test_mysql_service.py
tests/chapter_one/: test_request_wrapper.py
