[project]
name = "ddia-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autobahn>=24.4.2",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pymongo>=4.13.2",
    "pymysql>=1.1.1",
    "ruff>=0.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=22.0.0",
    "setuptools>=80.9.0",
]
